--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Chewy&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 :root{
-    --color-primario: #eed5c7/*#000000*/;
-    --color-secundario: #121481/*#F6F6F6*/;
-    --color-terciario: #df7e7e /*#22D4FD*/;
+    --color-primario: #0A3871/*#000000*/;
+    --color-secundario: #343A40/*#F6F6F6*/;
+    --color-terciario: #495057 /*#22D4FD*/;
+    --color-cuartario: #D8DFE8;
     --color-hover: #FFCBCB /*#272727*/;
-
-    --fuente-courier: "Courier Prime", monospace;
-    --fuente-chewy: 'Chewy', sans-serif;
-
+    --color-fondo: #E5E5E5;
+    --fuente-Inter: "Inter", sans-serif;
+    
 }
 
 *{
@@ -16,7 +15,7 @@
     padding: 0;
 }
 body{
-    background-color: rgba(255, 192, 203, 0.781);
+    background-color: var(--color-fondo);
 }
 
 .titulo{
@@ -24,8 +23,9 @@ body{
 }
 
 .titulo_logo{
-    width: 20%;
-    margin-top: -60px;
+    width: 7%;
+    margin-top: 15px;
+    margin-left: 10px;
 }
 
 main{
@@ -33,65 +33,132 @@ main{
     width: 100%;
     align-items: center;
     justify-content: center;
-    gap: 20px;
-    margin-top: -100px;
+    gap: 80px;
+    margin-top: 0px;
 }
 
 .caja_botones{
     display: flex;
-    flex-direction: column;
-    gap: 20px;
-    width: 15%;
+    flex-direction: row;
+    gap: 24px;
+    width: 100%;
+    justify-content: center;
 }
 
 .boton_encriptar{
-    width: 100%;
-    height: 50px;
-    border-radius: 50px;
-    font-family: var(--fuente-chewy);
-    font-size: 30px;
+    width: 45%;
+    height: 67px;
+    border-radius: 24px;
+    font-family: var(--fuente-Inter);
+    font-size: 16px;
+    color: var(--color-cuartario);
+    background-color: var(--color-primario);
+    border-style: solid;
+    border-color: var(--color-primario);
 }
 
 .boton_desencriptar{
-    width: 100%;
-    height: 50px;
-    border-radius: 50px;
-    font-family: var(--fuente-chewy);
-    font-size: 30px;
+    width: 45%;
+    height: 67px;
+    border-radius: 24px;
+    font-family: var(--fuente-Inter);
+    font-size: 16px;
+    color: var(--color-primario);
+    background-color: var(--color-cuartario);
+    border-style: solid;
+    border-color: var(--color-primario);
 }
 
+.caja_textarea_botones_parrafo{
+    color: var(--color-terciario);
+    font-family: var(--fuente-Inter);
+    font-size: 12px;
+    font-weight: 400;
+    margin: 20px 40px;
+}
 
+.caja_textarea_botones{
+    width: 60%;
+}
 #ingreso_texto{
-    width: 20%;
+    width: 90%;
     height: 400px;
     padding: 50px;
     border-radius: 50px;
-    font-family: var(--fuente-chewy);
-    font-size: 30px;
+    font-family: var(--fuente-Inter);
+    font-size: 32px;
+    background-color: transparent;
+    border:none;
+    outline: none;
 }
 
+::placeholder{
+    color: var(--color-primario);
+}
 #salida_texto{
-    width: 20%;
-    height: 400px;
-    padding: 50px;
+    width: 22%;
+    height: 720px;
+    padding: 0px;
+    margin-top: -50px;
     border-radius: 50px;
-    font-family: var(--fuente-chewy);
+    font-family: var(--fuente-Inter);
     font-size: 30px;
     background-color: white;
     display: flex;
-    justify-content: center;
+    
     align-items: center;
+    flex-direction: column;
+    position: relative;
+}
+
+#parrafoSalidaTexto{
+    position: absolute;
+    height: 550px;
+    margin-top: 20px;
+    text-align:left;
+    font-size: 24px;
+    color: var(--color-terciario);
+    padding: 20px;
+    
+}
+#salida-texto-caja{
+    height: 600px;
+    margin-top: 130px;
 }
 .salida_texto_imagen{
     width: 100%;
 }
 
+.texto1_salida_texto{
+    text-align: center;
+    font-family: var(--fuente-Inter);
+    font-weight: 700;
+    font-size: 24px;
+    color: var(--color-secundario);
+    margin-bottom: 10px;
+}
+.texto2_salida_texto{
+    text-align: center;
+    font-family: var(--fuente-Inter);
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--color-terciario);
+}
+
 .boton_copiar{
-    width: 15%;
-    height: 50px;
-    border-radius: 50px;
-    font-family: var(--fuente-chewy);
-    font-size: 30px;
+    width: 80%;
+    height: 67px;
+    border-radius: 24px;
+    font-family: var(--fuente-Inter);
+    font-size: 16px;
+    color: var(--color-primario);
+    background-color: var(--color-cuartario);
+    border-style: solid;
+    border-color: var(--color-primario);
+    
+    position: absolute;
+    bottom: 20px;
+    display: none;
 }
 
 footer{
@@ -102,5 +169,5 @@ footer{
     margin-top: 35px;
     margin-bottom: 0;
     background-color: #df7e7e;
-    font-family: var(--fuente-chewy);
+    font-family: var(--fuente-Inter);
 }
