Diseño Web listo y se soluciona errores en app.js

--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ main{
     align-items: center;
     flex-direction: column;
     position: relative;
+    
 }
 
 #parrafoSalidaTexto{
@@ -116,7 +117,7 @@ main{
     height: 550px;
     margin-top: 20px;
     text-align:left;
-    font-size: 24px;
+    font-size: 1.5rem;
     color: var(--color-terciario);
     padding: 20px;
     
