--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --color-cuartario: #D8DFE8;
     --color-hover: #FFCBCB /*#272727*/;
     --color-fondo: #E5E5E5;
+    --color-error: #f70404;
     --fuente-Inter: "Inter", sans-serif;
     
 }
@@ -74,7 +75,19 @@ main{
     font-family: var(--fuente-Inter);
     font-size: 12px;
     font-weight: 400;
-    margin: 20px 40px;
+    margin: 10px 40px;
+}
+
+i{
+    margin-right: 10px;
+}
+
+#errorMayusculas, #errorCaracteresEspeciales, #errorTildes{
+    color: var(--color-error);
+    font-family: var(--fuente-Inter);
+    font-size: 12px;
+    font-weight: 400;
+    margin: 10px 40px 20px;
 }
 
 .caja_textarea_botones{
@@ -169,6 +182,7 @@ footer{
     text-align: center;
     margin-top: 35px;
     margin-bottom: 0;
+    display: block;
     background-color: #df7e7e;
     font-family: var(--fuente-Inter);
 }
